[package]
name = "todo-desu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
bytes = "1.4.0"
hyper = { version = "0.14.26", features = ["full"] }
mime = "0.3.17"
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
shrimple = { git = "https://github.com/Player01osu/shrimple-shell-script" }
